--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -1,3 +1,5 @@
+New in 5.0.
+Fixed some bugs with selecting various options in the audio settings menu.
 New in 4.9.
 Removed all of the descriptions related to toggling various options in the game settings menu.
 Added some menu navigation options to the game settings menu.
